[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "cmdu"
version = "0.0.9"
description = "A small command line library for daily tasks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [
    "pyyaml",
    "tzdata"
]
[[project.authors]]
name = "Xeth Hung"
email = "admin@xethh.me"

[project.urls]
Homepage = "https://github.com/xh-dev-py/weather-warning-summary-xethhung12"
"Bug Tracker" = "https://github.com/xh-dev-py/weather-warning-summary-xethhung12/issues"